--- a/index.html
+++ b/index.html
@@ -1,43 +1,59 @@
 <!doctype html>
 <html>
+
 <head>
-<!-- Metas -->
-  <meta charset="utf-8">
-  <title>元智大學2016三資迎新 - 霍格華資</title>
-  <meta name="description" content="元智大學 2016 三資迎新 - 霍格華資。報名截止日：8/18，繳費截止日：8/20，活動時間： 8/22 - 8/26。歡迎資傳、資工、資管的大一新生加入唷！">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1, user-scalable=no" />
-  <meta name="author" content="Oschangkai, sappy5678">
-  <meta name="keywords" content="元智大學, 元智, 三資迎新, yzu2016camp, 霍格華資, 2016, 三資, 資工, 資管, 資傳" />
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="format-detection" content="telephone=no">
-<!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="assets/favicon/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="assets/favicon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="assets/favicon/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-  <link rel="manifest" href="assets/favicon/manifest.json">
-  <meta name="theme-color" content="rgba(0,28,49,1)">
-  <meta name="msapplication-TileImage" content="../assets/favicon/ms-icon-144x144.png">
-<!-- CSSs -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="assets/css/desktop.css">
-  <!--[if lt IE 9]>
+    <!-- Metas -->
+    <meta charset="utf-8">
+    <title>元智大學2016三資迎新 - 霍格華資</title>
+    <meta name="description" content="元智大學 2016 三資迎新 - 霍格華資。報名截止日：8/18，繳費截止日：8/20，活動時間： 8/22 - 8/26。歡迎資傳、資工、資管的大一新生加入唷！">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1, user-scalable=no" />
+    <meta name="author" content="Oschangkai, sappy5678">
+    <meta name="keywords" content="元智大學, 元智, 三資迎新, yzu2016camp, 霍格華資, 2016, 三資, 資工, 資管, 資傳" />
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="format-detection" content="telephone=no">
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/manifest.json">
+    <meta name="theme-color" content="rgba(0,28,49,1)">
+    <meta name="msapplication-TileImage" content="../assets/favicon/ms-icon-144x144.png">
+    <!-- CSSs -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/desktop.css">
+    <link rel="stylesheet" href="assets/css/zi.css">
+    <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
-<body>
 
+<body>
+    <nav class="mainnav row">
+        <div class="container">
+            <div class="col s9">
+                <a class="navitem" href="#">首頁</a>
+                <a class="navitem" href="#">關於我們</a>
+                <a class="navitem" href="#">行程表</a>
+                <a class="navitem" href="#">注意事項</a>
+                <a class="navitem" href="#">我要報名</a>
+            </div>
+            <div class="col s3">
+                <a class="navbutton" href="#">繳費登記與查詢</a>
+            </div>
+        </div>
+    </nav>
 </body>
