--- a/index.html
+++ b/index.html
@@ -42,18 +42,17 @@
 </head>
 
 <body>
-    <nav class="mainnav row">
-        <div class="container">
-            <div class="col s9">
-                <a class="navitem" href="#">首頁</a>
-                <a class="navitem" href="#">關於我們</a>
-                <a class="navitem" href="#">行程表</a>
-                <a class="navitem" href="#">注意事項</a>
-                <a class="navitem" href="#">我要報名</a>
-            </div>
-            <div class="col s3">
-                <a class="navbutton" href="#">繳費登記與查詢</a>
-            </div>
+    <nav class="mainnav">
+
+        <div class="mainmargin">
+            <a class="navitem leftmargin" href="#">首頁</a>
+            <a class="navitem leftmargin" href="#">關於我們</a>
+            <a class="navitem leftmargin" href="#">行程表</a>
+            <a class="navitem leftmargin" href="#">注意事項</a>
+            <a class="navitem leftmargin" href="#">我要報名</a>
+            <a class="navbutton rightmargin" href="#">繳費登記與查詢</a>
         </div>
+
+
     </nav>
 </body>
