--- a/index.html
+++ b/index.html
@@ -36,23 +36,57 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="assets/css/desktop.css">
     <link rel="stylesheet" href="assets/css/zi.css">
+    <!-- scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>
+        $(function() {
+            $.scrollIt();
+        });
+    </script>
     <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
 
 <body>
-    <nav class="mainnav">
-
-        <div class="mainmargin">
-            <a class="navitem leftmargin" href="#">首頁</a>
-            <a class="navitem leftmargin" href="#">關於我們</a>
-            <a class="navitem leftmargin" href="#">行程表</a>
-            <a class="navitem leftmargin" href="#">注意事項</a>
-            <a class="navitem leftmargin" href="#">我要報名</a>
-            <a class="navbutton rightmargin" href="#">繳費登記與查詢<i class="large material-icons navbottonicon rightmargin">search</i></a>
+    <!-- navigation -->
+    <nav class="transparent mainnav z-depth-0">
+        <div class="container">
+            <div>
+                <a data-scroll-nav="0" class="navitem leftmargin">首頁</a>
+                <a data-scroll-nav="1" class="navitem leftmargin">關於我們</a>
+                <a data-scroll-nav="2" class="navitem leftmargin">行程表</a>
+                <a data-scroll-nav="3" class="navitem leftmargin">注意事項</a>
+            </div>
+            <div>
+                <a class="navrightitem rightmargin" id="navsignup" href="#">馬上報名<i class="large material-icons navbottontrend rightmargin">trending_flat</i></a>
+                <a class="navrightitem rightmargin" id="navcheck">繳費登記與查詢<i class="large material-icons navbottonsearch rightmargin">search</i></a>
+            </div>
         </div>
-
-
     </nav>
+    <!-- 首頁 -->
+    <div class="">
+        <section data-scroll-index="0" id="landing" class="section1-content">
+            <h1>霍格華茲</h1>
+        </section>
+        <!-- 關於 -->
+        <section id="aftermain">
+            <div data-scroll-index="1" id="about">
+
+            </div>
+            <!-- 日程表 -->
+            <div data-scroll-index="2" id="schedule">
+
+            </div>
+            <!-- 注意事項 -->
+            <div data-scroll-index="3" id="notice">
+
+            </div>
+            <!-- 報名 -->
+            <div id="signup">
+            </div>
+        </section>
+    </div>
+    <!-- script -->
+    <script src="assets/js/scrollIt.min.js"></script>
 </body>
