--- a/index.html
+++ b/index.html
@@ -76,28 +76,52 @@
                 <div class="section1-content">
                     <!-- leftside-Content -->
                     <div class="leftmargin">
-                        <div style="position:absolute; top:100px;">
-                            <h1>霍格華資</h1>
-                            <p>元智大學2016三資迎新</p>
-                        </div>
-                        <!-- dropdown-Button -->
-                        <div style="position:absolute; top: 90vh;">
-                            <a data-scroll-goto="1" class="dropdownContent circle contentcenter z-depth-1">
-                                <i class="material-icons dropdown"><b>arrow_downward</b></i>
-                            </a>
+                        <div class="left-Content">
+                            <br>
+                            <br>
+                            <div class="" style="">
+                                <img src="assets/img/banner-chenText.png" alt="hogwhatsText" style="width:440.5px; height:118.7px;" />
+                                <!-- <img src="assets/img/banner-chText.png" alt="" style="width:288.1px; height:118.7px;" /> -->
+                            </div>
+                            <br>
+
+
+                            <h5 class="font-mainkblue" style="">22 OCTOBER 2016&nbsp;&nbsp;-&nbsp;&nbsp;26 OCTOBER 2016</h5>
+                            <!-- <p class="font-mainkblue">元智大學2016三資迎新</p> -->
+                            <br>
+                            <br>
+                            <br>
+                            <div class="font-mainkblue">
+                                <p style="position:relative; bottom:-13px;">距離三資迎新還有</p>
+                                <div class="" style="width:440.5;display: -webkit-flex;
+                                    display: flex;">
+                                    <span class="countdown-txt" style="font-size:58px; display: inline-block;"><b>10&nbsp;&nbsp;&nbsp;&nbsp;<p style="font-size:20px; position: relative; top: -23px; padding:0 0 0 25px;">
+                                      天
+                                    </p></b></span>
+                                    <span class="countdown-txt" style="font-size:58px; display: inline-block;"><b>11&nbsp;&nbsp;&nbsp;&nbsp;</b><p style="font-size:20px; position: relative; top: -23px; padding:0 0 0 25px;">
+                                      時
+                                    </p></span>
+                                    <span class="countdown-txt" style="font-size:58px; display: inline-block;"><b>12&nbsp;&nbsp;&nbsp;&nbsp;</b><p style="font-size:20px; position: relative; top: -23px; padding:0 0 0 25px;">
+                                      分
+                                    </p></span>
+                                    <span class="countdown-txt" style="font-size:58px; display: inline-block;"><b>13</b><p style="font-size:20px; position: relative; top: -23px; padding:0 0 0 25px;">
+                                      秒
+                                    </p></span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <!-- rightside-Content -->
-                    <div class="rightmargin">
-                        <div style="position:relative; top:95px;left:200px; font-size:20px;">
-                            <span><b>10</b></span>
-                            <span><b>11</b></span>
-                            <span><b>12</b></span>
-                            <span><b>13</b></span>
+                    <div class="rightmargin right-Content">
+                        <div class="landingimg-Div">
+                            <img src="assets/img/member-square-transparent.png" alt="castel" class="landingimg" />
                         </div>
-                        <div class="">
-                            <img src="assets/img/member-square.png" alt="" style="width:520px; height:520px; position:relative; top:18vh;" />
-                        </div>
+                    </div>
+                    <!-- dropdown-Button -->
+                    <div class="dropdownDiv">
+                        <a data-scroll-goto="1" class="dropdownContent circle contentcenter z-depth-1">
+                            <i class="material-icons dropdown"><b>arrow_downward</b></i>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -113,7 +137,7 @@
                     <div class="card aboutcard">
                         <div class="card-contents">
                             <!-- <span class="card-title">關於三資迎新</span> -->
-                            <p class="cardcontentalign" style="padding-top: 50px;">I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                            <p class="cardcontentalign" style="padding-top: 50px;"></p>
                         </div>
                     </div>
                 </div>
@@ -123,25 +147,25 @@
                     <h5 class="container secondarytitle">歷年粉專</h5>
                     <div id="firstrow" class="container historyfans flex">
                         <div id="camp2011" class="card small z-depth-1 cardsize cardborder">
-                            <!-- Card Content -->
+
                         </div>
                         <div id="camp2012" class="card small z-depth-1 cardsize cardborder">
-                            <!-- Card Content -->
+
                         </div>
                         <div id="camp2013" class="card small z-depth-1 cardsize cardborder">
-                            <!-- Card Content -->
+
                         </div>
                     </div>
 
                     <div id="thirdrow" class="container historyfans flex">
                         <div id="camp2014" class="card small z-depth-1 cardsize cardborder">
-                            <!-- Card Content -->
+
                         </div>
                         <div id="camp2015" class="card small z-depth-1 cardsize cardborder">
-                            <!-- Card Content -->
+
                         </div>
                         <div id="camp2016" class="card small z-depth-1 cardsize cardborder">
-                            <!-- Card Content -->
+
                         </div>
                     </div>
                 </content>
@@ -150,6 +174,74 @@
             <!-- 日程表 -->
             <section data-scroll-index="2" id="schedule">
                 <h3 class="container maintitle">活動</h3>
+                <div class="container">
+                    <table style="background-color: rgba(255, 255, 255, 1);">
+                        <tr>
+                            <th></th>
+                            <th>Day1</th>
+                            <th>Day2</th>
+                            <th>Day3</th>
+                            <th>Day4</th>
+                            <th>Day5</th>
+                        </tr>
+                        <tr>
+                            <td>9:00 - 10:00</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>9:00 - 10:00</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>9:00 - 10:00</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>9:00 - 10:00</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>9:00 - 10:00</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>9:00 - 10:00</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>9:00 - 10:00</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </table>
+                </div>
             </section>
 
             <!-- 注意事項 -->
@@ -158,7 +250,7 @@
                 <div class="container">
                     <div id="noticecard" class="card-panel cardcontentalign" style="padding-top: 50px;">
                         <p class="">
-                            I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
+
                         </p>
                     </div>
                 </div>
@@ -176,4 +268,5 @@
     <!-- script -->
     <script src="assets/js/scrollIt.min.js"></script>
 
+</body>
 </body>
