--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
     <link rel="stylesheet" href="assets/css/zi.css">
     <!-- scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="assets/js/zi.js"></script>
     <script>
         $(function() {
             $.scrollIt({
@@ -84,37 +83,38 @@
                                 <!-- <img src="assets/img/banner-chText.png" alt="" style="width:288.1px; height:118.7px;" /> -->
                             </div>
                             <br>
-
-
                             <h5 class="font-mainkblue" style="">22 OCTOBER 2016&nbsp;&nbsp;-&nbsp;&nbsp;26 OCTOBER 2016</h5>
                             <!-- <p class="font-mainkblue">元智大學2016三資迎新</p> -->
                             <br>
                             <br>
-                            <br>
-                            <div class="font-mainkblue">
+
+                            <!-- <video width="450" height="300" controls>
+                                <source src="" type="">
+                                <source src="" type=""> Your browser does not support the video tag.
+                            </video> -->
+                        </div>
+                        <!-- rightside-Content -->
+                        <div class="rightmargin right-Content">
+                            <div class="font-mainkblue rightmargin" style="width: 360px; margin-right: 60px;">
                                 <p style="position:relative; bottom:-13px;">距離三資迎新還有</p>
-                                <div class="" style="width:440.5;display: -webkit-flex;
-                                    display: flex;">
-                                    <span class="countdown-txt" style="font-size:58px; display: inline-block;"><b>10&nbsp;&nbsp;&nbsp;&nbsp;<p style="font-size:20px; position: relative; top: -23px; padding:0 0 0 25px;">
-                                      天
-                                    </p></b></span>
-                                    <span class="countdown-txt" style="font-size:58px; display: inline-block;"><b>11&nbsp;&nbsp;&nbsp;&nbsp;</b><p style="font-size:20px; position: relative; top: -23px; padding:0 0 0 25px;">
-                                      時
-                                    </p></span>
-                                    <span class="countdown-txt" style="font-size:58px; display: inline-block;"><b>12&nbsp;&nbsp;&nbsp;&nbsp;</b><p style="font-size:20px; position: relative; top: -23px; padding:0 0 0 25px;">
-                                      分
-                                    </p></span>
-                                    <span class="countdown-txt" style="font-size:58px; display: inline-block;"><b>13</b><p style="font-size:20px; position: relative; top: -23px; padding:0 0 0 25px;">
-                                      秒
-                                    </p></span>
+                                <div class="" style="display: -webkit-flex; display: flex;">
+                                    <span class="countdown-txt" style="font-size:30px; display: inline-block;"><b id="countdownD">0&nbsp;&nbsp;&nbsp;&nbsp;<p style="font-size:20px; position: relative; top: -23px; padding:0 0 0 25px;">
+                                        天
+                                      </p></b></span>
+                                    <span class="countdown-txt" style="font-size:30px; display: inline-block;"><b id="countdownH">0&nbsp;&nbsp;&nbsp;&nbsp;</b><p style="font-size:20px; position: relative; top: -23px; padding:0 0 0 25px;">
+                                        時
+                                      </p></span>
+                                    <span class="countdown-txt" style="font-size:30px; display: inline-block;"><b id="countdownM">0&nbsp;&nbsp;&nbsp;&nbsp;</b><p style="font-size:20px; position: relative; top: -23px; padding:0 0 0 25px;">
+                                        分
+                                      </p></span>
+                                    <span class="countdown-txt" style="font-size:30px; display: inline-block;"><b id="countdownS">0</b><p style="font-size:20px; position: relative; top: -23px; padding:0 0 0 25px;">
+                                        秒
+                                      </p></span>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <!-- rightside-Content -->
-                    <div class="rightmargin right-Content">
-                        <div class="landingimg-Div">
-                            <img src="assets/img/member-square-transparent.png" alt="castel" class="landingimg" />
+                            <div class="landingimg-Div">
+                                <img src="assets/img/member-square-transparent.png" alt="castel" class="landingimg" />
+                            </div>
                         </div>
                     </div>
                     <!-- dropdown-Button -->
@@ -249,8 +249,7 @@
                 <h3 class="container maintitle">營期注意事項</h3>
                 <div class="container">
                     <div id="noticecard" class="card-panel cardcontentalign" style="padding-top: 50px;">
-                        <p class="">
-
+                        <p>
                         </p>
                     </div>
                 </div>
@@ -267,6 +266,5 @@
 
     <!-- script -->
     <script src="assets/js/scrollIt.min.js"></script>
-
-</body>
+    <script src="assets/js/zi.js"></script>
 </body>
